<resources>
    <string name="app_name">健康評量從你我做起</string>
    <string name="tv_food">飲食行為測量表</string>
    <string name="tv_pressure">壓力指數測量表</string>
    <string name="tv_BMI">BMI計算</string>
    <string name="tv_BMR">基礎代謝計算</string>
    <string name="todo">TODO</string>
    <string name="illustrate">說明： \n此量測表參考《衛生署戰勝肥胖：減重指導手冊》，請您根據最近一週的飲食狀態，選擇適當答案。 \n總是：十次中有八次以上是如此 \n常常：十次中有六至八次 \n偶爾：十次中有三至五次 \n很少：十次中有一至二次或全非如此</string>
    <string name="illustrate_bmi">說明：
世界衛生組織建議以身體質量指數（Body Mass Index, BMI）來衡量肥胖程度，其計算公式是以體重（公斤）除以身高（公尺）的平方。 國民健康署建議我國成人BMI應維持在18.5（kg/㎡）及24（kg/㎡）之間，太瘦、過重或太胖皆有礙健康。 研究顯示，體重過重或是肥胖（BMI≧24）為糖尿病、心血管疾病、惡性腫瘤等慢性疾病的主要風險因素；而過瘦的健康問題，則會有營養不良、骨質疏鬆、猝死等健康問題。</string>
    <string name="few">很少</string>
    <string name="sometimes">偶爾</string>
    <string name="often">常常</string>
    <string name="always">總是</string>
    <string name="name">性別</string>
    <string name="height">身高</string>
    <string name="weight">體重</string>
    <string name="submit">送 出</string>
    <string name="fir">1.我定時吃三餐。</string>
    <string name="sec">2.我不吃甜食或零食。</string>
    <string name="thi">3.我吃東西時細嚼慢嚥，每口食物至少嚼二十次才吞下。</string>
    <string name="four">4.口渴或很熱時，我不喝汽水、可樂、運動飲料、加糖的茶或咖啡飲料而會喝白開水。</string>
    <string name="five">5.我避免吃油炸或含油高的食物（如腰果、花生、瓜子、洋芋片）。</string>
    <string name="six">6.我每天吃水果。</string>
    <string name="seven">7.我每天吃綠色蔬菜。</string>
    <string name="eight">8.我會吃宵夜。</string>
    <string name="nine">9.我在看電視或看書刊雜誌時吃東西。</string>
    <string name="ten">10.我心情不好時，會吃東西來紓解。</string>
    <string name="elev">11.我用吃來獎勵自己或慶祝。</string>
    <string name="twe">12.我在很餓時，才去買東西。</string>
    <string name="count"><u>計數方式有：</u> <small>題號1～7，答『總是』得3分、『常常』得2分、『偶爾』得1分、『很少』得0分。\n題號8～12，答『總是』得0分、『常常』得1分、『偶爾』得2分、『很少』得3分。\n</small><u>飲食行為記分說明：</u> <small>0-12分，慘了！慘了！您的飲食行為非常糟糕，建議下定決心來減重。\n13-20分，雖然您比0-12分好一點，也別『龜笑鱉無尾』，請努力改變自己的飲食習慣。\n21-30分，加油！加油！飲食習慣再繼續改善小缺失，就更棒了。\n31-36分，您真棒！請持之以恆，就可以輕鬆獲得健康唷！</small></string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="result">飲食行為剖析 0 分</string>
    <string name="BMI">您的BMI為 :</string>
    <string name="bmiResult"> </string>
    <string name="cm">請 輸 入 身 高 (cm)</string>
    <string name="kg">請 輸 入 體 重 (kg)</string>
    <string name="number">20.0</string>


    <!--2-->


        <string name="title_pre">壓力指數測量表</string>
        <string name="caption_pre">說明：預防勝於治療，職場心理健康促進計劃的第一步就是了解現況。因此，可利用本表進行壓力評估，評估每位員工的壓力狀況，作為擬訂壓力管理計畫之參考依據。</string>
        <string name="btn_yes">是</string>
        <string name="btn_no">否</string>
        <string name="q1">1. 您最近是否經常感到緊張，覺得工作總是做不完？</string>
        <string name="q2">2. 您最近是否老是睡不好，常常失眠或睡眠品質不佳？</string>
        <string name="q3">3. 您最近是否經常有情緒低落、焦慮、煩躁的情況？</string>
        <string name="q4">4. 您最近是否經常忘東忘西、變得很健忘？</string>
        <string name="q5">5. 您最近是否經常覺得胃口不好？或胃口特別好？</string>
        <string name="q6">6. 您最近六個月內是否生病不只一次了？</string>
        <string name="q7">7. 您最近是否經常覺得很累，假日都在睡覺？</string>
        <string name="q8">8. 您最近是否經常覺得頭痛、腰痠背痛？</string>
        <string name="q9">9. 您最近是否經常意見和別人不同？</string>
        <string name="q10">10. 您最近是否注意力經常難以集中？</string>
        <string name="q11">11. 您最近是否經常覺得未來充滿不確定感？恐懼感？</string>
        <string name="q12">12. 有人說您最近氣色不太好嗎？</string>
        <string name="btn_submit">送出</string>
        <string name="title_result">壓力指數測量結果</string>
        <string name="forresult">回答「是」有</string>
        <string name="answer"></string>
        <string name="unit">個</string>
        <string name="caption_result"><b>壓力指數解答</b>\n<u>回答 3 個「是」</u>：您的壓力指數還在能負荷的範圍。\n<u>回答 4~5 個「是」</u>：壓力滿困擾您，雖能勉強應付，但必需認真學習壓力管理了，同時多與良師益友聊一聊。\n<u>回答 6~8 個「是」</u>：您的壓力很大，趕快去看心理衛生專業人員，接受系統性的心理治療。\n<u>回答 9 個以上「是」</u>：您的壓力已很嚴重，應該看精神專科醫師，依醫師處方用藥物治療與心理治療，幫忙您的生活趕快恢復正常軌道。</string>

    <!--3-->
    <string name="title">BMR計算</string>
    <string name="caption">說明：BMR指人體在休息狀態下，維持新陳代謝所需的熱量，例如：呼吸、器官運作、體溫維持等，即使整天躺著不動也會消耗的最低熱量。BMR會隨著年紀增加或體重減輕而降低，會隨著肌肉量增加而上升。</string>
    <string name="gender">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="age">年齡</string>
    <string name="ed_age">                    請 輸 入 年 齡</string>

    <string name="ed_height">                 請 輸 入 身 高 (cm)</string>

    <string name="ed_weight">                    請 輸 入 體 重 (kg)</string>

    <string name="result_BMR">BMR計算結果</string>
    <string name="resultGender">性別：無</string>
    <string name="resultAge">年齡：0</string>
    <string name="resultHeight">身高：0</string>
    <string name="resultWeight">體重：0</string>
    <string name="BMR">年齡:\n身高:\n體重:\nBMR為:</string>
    <string name="formula"><b>計算公式</b>\n基礎代謝率 = (9.99 × 體重) + (6.25 × 身高) -\n(4.92 × 年齡) + (166 × 性別 (男 1、女 0) - 161)</string>
</resources>
