<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_food_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="20dp"
                android:text="@string/tv_BMI"
                android:textColor="#829143"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="360dp"
                android:layout_height="315dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:background="#F5F7EC"
                android:padding="10dp"
                android:text="@string/illustrate_bmi"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="360dp"
                    android:layout_height="200dp"
                    android:background="#F2F2F2" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/boy"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/girl"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="230dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="50dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/cm"
                    android:textColor="#757575"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="230dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="90dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/kg"
                    android:textColor="#757575"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="350dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="150dp"
                    android:background="#829140"
                    android:onClick="bmi"
                    android:paddingTop="2dp"
                    android:text="@string/submit"
                    app:backgroundTint="@null"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/height"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="100dp"
                    android:text="@string/weight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="290dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="284dp"
                    android:src="@drawable/bmi"
                    android:contentDescription="@string/todo" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>